# mysql-udf-regexp

./: COPYING  ChangeLog  Makefile.am  Makefile.in  README  README.md  configure  configure.in  mysql.m4  regexp.c  regexp.xml  udf_regexp.h
regexp/: AUTHORS  INSTALL  Makefile.am  Makefile.in  NEWS  README  acinclude.m4  aclocal.m4  ax_compare_version.m4  config.h.in  configure  configure.in  manual.xml  mysql.m4  regexp.c  udf_regexp.h
regexp/tests/: create_functions.inc  drop_functions.inc
regexp/tests/r/: regexp_instr.result  regexp_like.result  regexp_replace.result  regexp_substr.result
regexp/tests/t/: regexp_instr.test  regexp_like.test  regexp_replace.test  regexp_substr.test
tests/: test.sh
tests/r/: regexp_instr.result  regexp_replace.result  regexp_substr.result
tests/t/: regexp_instr.test  regexp_like.test  regexp_replace.test  regexp_substr.test
